# sidecar-example

./: Cargo.toml  Makefile  job.yaml  kindest.yaml  main.dockerfile  sidecar.dockerfile
src/: main.rs  sidecar.rs
