[package]
name = "sidecar-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sidecar"
path = "src/sidecar.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
ctrlc = { version = "3.4", features = ["termination"] }
